--- a/templates/email/test.html.twig
+++ b/templates/email/test.html.twig
@@ -1,4 +1,4 @@
-{% extends 'layout.html.twig' %}
+{% extends 'email/layout.html.twig' %}
 
 {% block content %}
     <div>Mon texte <b>s</b>b> maison</div>
