--- a/templates/email/test.html.twig
+++ b/templates/email/test.html.twig
@@ -1,7 +1,5 @@
 {% extends 'email/layout.html.twig' %}
 
-
-
 {% block content %}
-    <div>Mon texte <b>s</b> maison</div>
+    <div>La configuration SMTP est valide.</div>
 {% endblock %}
