Logo is now has an attachment so gmail can display it

--- a/templates/email/layout.html.twig
+++ b/templates/email/layout.html.twig
@@ -146,7 +146,7 @@
                                                                 <td class="center" style="padding: 0 16px;">
                                                                     <a href="{{ home_url }}" target="_blank">
                                                                         {% if logo is not empty %}
-                                                                            <img src="{{ logo }}" width="80" alt="Logo"
+                                                                            <img src="cid:{{ logo }}" width="80" alt="Logo"
                                                                                  border="0" align="center"/>
                                                                         {% else %}
                                                                             <h2>Narvik - Application pour club de
