Return config for notification enabled or not in frontend

--- a/templates/email/layout.html.twig
+++ b/templates/email/layout.html.twig
@@ -149,8 +149,7 @@
                                                                             <img src="cid:{{ logo }}" width="80" alt="Logo"
                                                                                  border="0" align="center"/>
                                                                         {% else %}
-                                                                            <h2>Narvik - Application pour club de
-                                                                                tir</h2>
+                                                                            <h2>Narvik - Application pour club de tir</h2>
                                                                         {% endif %}
                                                                     </a>
                                                                 </td>
