Update email logo

--- a/templates/email/layout.html.twig
+++ b/templates/email/layout.html.twig
@@ -139,16 +139,16 @@
                                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                 <!-- Header -->
                                                 <tr>
-                                                    <td style="padding: 24px 0;">
+                                                    <td style="padding: 12px 0;">
                                                         <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                                             <tr>
                                                                 <td class="center" style="padding: 0 16px;">
                                                                     <a href="{{ home_url }}" target="_blank">
                                                                         {% if logo is not empty %}
-                                                                            <img src="cid:{{ logo }}" width="80" alt="Logo"
+                                                                            <img src="cid:{{ logo }}" width="160" alt="Logo"
                                                                                  border="0" align="center"/>
                                                                         {% else %}
-                                                                            <h2>Narvik - Application pour club de tir</h2>
+                                                                            <h2>Narvik</h2>
                                                                         {% endif %}
                                                                     </a>
                                                                 </td>
@@ -202,7 +202,7 @@
                                                                 <td class="footer-text">
                                                                     <a href="https://narvik.pages.dev/" target="_blank"
                                                                        class="button"
-                                                                       title="Application pour club de tir">
+                                                                       title="Narvik">
                                                                         Narvik
                                                                     </a>
                                                                 </td>
