--- a/templates/email/layout.html.twig
+++ b/templates/email/layout.html.twig
@@ -35,7 +35,7 @@
                 text-align: center;
             }
 
-            .container-wrapper {
+            .container-table {
                 padding: 32px;
             }
 
@@ -111,7 +111,7 @@
 
             /* Mobile */
             @media only screen and (max-device-width: 640px), only screen and (max-width: 640px) {
-                .container-wrapper {
+                .container-table {
                     padding: 10px !important;
                 }
 
@@ -126,8 +126,8 @@
     </head>
     <body class="body">
     <center class="container-wrapper">
-        <table width="100%" border="0" cellspacing="0" cellpadding="0"
-               style="margin: 0; padding: 0; width: 100%; height: 100%;">
+        <table class="container-table" width="100%" border="0" cellspacing="0" cellpadding="0"
+               style="margin: 0; width: 100%; height: 100%;">
             <tr>
                 <td style="margin: 0; padding: 0; width: 100%; height: 100%;" align="center" valign="top">
                     <table border="0" cellspacing="0" cellpadding="0" class="container">
